--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,35 +21,28 @@ body {
 	overflow: hidden;
 }
 
-// .active{
-// 	background-color: rgba(251, 255, 5, 1);
-// }
-
-.disable {
-	// display: none;
-	opacity: 0;
-}
-
 .book {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 40%;
+	width: 45%;
 	height: 95vh;
-	// perspective: 500cm;
+	perspective: 1100px;
 	transform: translate(-50%, -50%);
 	transition: transform 2s;
 
 	&__btn {
 		position: absolute;
 		top: 0;
-		width: 100px;
-		height: 100px;
+		width: 50px;
+		height: 50px;
 		transform: translateY(-50%);
 		font-size: 2rem;
 		background-color: transparent;
 		border: none;
-		transition: opacity 0.5s;
+		opacity: 0;
+		transition: opacity 2s 1s;
+		// z-index: 20;
 
 		&--arrow {
 			width: 100%;
@@ -67,117 +60,194 @@ body {
 		transform: rotateZ(40deg);
 	}
 
+	&__open {
+		position: absolute;
+		top: 60%;
+		left: 50%;
+		transform: translateX(-50%);
+		padding: 0.25em 0.5em;
+		border: none;
+		background: none;
+		// background: rgb(115, 121, 4);
+		// background: linear-gradient(
+		// 	42deg,
+		// 	rgb(122, 126, 45) 0%,
+		// 	rgba(218, 200, 138, 1) 35%,
+		// 	rgb(137, 168, 13) 100%
+		// );
+		font-size: 2rem;
+		color: #ccc;
+		font-family: 'Handlee';
+		border-radius: 8px;
+		text-transform: uppercase;
+		font-weight: bold;
+		opacity: 0;
+		transition: opacity 1s, color 1s, background-color 1s;
+		cursor: pointer;
+
+		&:hover{
+			color: #000;
+			background-color: #ccc;
+		}
+	}
+
 	&__page {
 		position: absolute;
 		top: 0;
-		left: 50%;
-		perspective: 1200px;
-		transform: translateX(-50%);
-		// background-color: rgba(0,0,0,0);
+		left: 0;
 		width: 100%;
 		height: 100%;
-		// box-shadow: 0 0 5px;
-		// transform-origin: -25%;
-		// transition: transform 1s;
-		// background-image: url('/dist/img/paper.jpg');
+		box-shadow: 0 0 5px;
+		transform-origin: left;
+		transition: transform 2s, opacity 1s;
+		background-image: url('/dist/img/paper.jpg');
+		opacity: 0;
 	}
 
 	&__title {
-		// color: rgba(0,0,0,1);
-		transition: color 1s;
+		position: absolute;
+		top: 25%;
+		left: 50%;
+		transform: translateX(-50%);
+		background-image: url('../../dist/img/title_paper.jpg');
+		padding: 0.25em 1em;
+		box-shadow: 0 0 10px;
+		border-radius: 8px;
+		text-align: center;
+		font-size: 2rem;
 	}
 
 	&__page-up {
 		position: absolute;
-		transform-origin: left;
 		width: 100%;
 		height: 100%;
 		box-shadow: 0 0 10px;
-		perspective: 10cm;
-		background-image: url('../../dist/img/paper.jpg');
-		perspective-origin: right;
-		color: rgba(0, 0, 0, 0);
 		opacity: 0;
-		transition: transform 2s, background-color 2s, color 2s, opacity 1s;
+		transition: opacity 1s;
 	}
 
 	&__page-down {
 		position: absolute;
-		transform-origin: left;
-		transform: rotateY(0);
 		width: 100%;
 		height: 100%;
 		box-shadow: 0 0 10px;
-		perspective: 10cm;
-		background-image: url('../../dist/img/paper.jpg');
-		// background-color: rgba(0,0,0,0);
-		perspective-origin: left;
-		color: rgba(0, 0, 0, 0);
 		opacity: 0;
-		transition: transform 2s, background-color 2s, color 2s, opacity 0.4s;
-		// z-index: -5;
-	}
-
-	&__background {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		// background-image: url('/dist/img/paper.jpg');
-		opacity: 0;
-		// background-color: yellow;
-		// z-index: 0;
-	}
-
-	&__background-down {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		// background-image: url('/dist/img/paper.jpg');
-		// opacity: 1;
-		// background-color: yellow;
-		// z-index: 0;
+		transition: opacity 1s;
 	}
 
 	&__background-cover {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 		background-image: url('../../dist/img/cover.jpg');
 		background-position: center;
 		background-size: cover;
-		opacity: 1;
-		z-index: 10;
+		opacity: 0;
+		transition: opacity 1s;
 	}
 
 	&__content {
-		transition: color 0.5s;
-		// z-index: 5;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		height: 100%;
+		padding-top: 5em;
+		text-align: center;
+		transition: opacity 1s, transform 1s;
 	}
 
 	&__content-down {
-		transform: rotateY(180deg);
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
 		height: 100%;
-		transition: color 0.5s;
-		// z-index: 5;
+		padding-top: 5em;
+		text-align: center;
+		// overflow-wrap: break-word;
+		transform: rotateY(180deg);
+		transition: opacity 1s, transform 1s;
+	}
+
+	&__aboutme-title{
+		font-size: 1.75rem;
+	}
+
+	&__aboutme-img{
+		width: 90%;
+		box-shadow: 0 0 10px;
+		border-radius: 25%;
+	}
+
+	&__text{
+		width: 100%;
+		padding: 0 .5em;
+		font-size: 1.25rem;
+	}
+
+	&__work-box{
+		list-style: none;
+	}
+
+	&__work-btn{
+		position: relative;
+		padding: .5em 1em;
+		border: none;
+		background: none;
+		font-size: 1.5rem;
+		font-family: 'Handlee';
+
+		&::after{
+			position: absolute;
+			bottom: 10%;
+			left: 50%;
+			transform: translateX(-50%);
+			background-color: black;
+			width: 0;
+			height: 2px;
+			transition: width .5s;
+			content: '';
+			
+		}
+		
+		&:hover{
+			&::after{
+				width: 80%;
+			}
+		}
 	}
 }
+
+
+.section-title{
+	font-size: 1.75rem;
+}
+
+.deco-line{
+	width: 80%;
+	margin: 3em 0;
+	border-color: #000;
+}
+
 .active {
-	// background-image: url('/dist/img/paper.jpg');
-	// background-color: rgba(0, 0, 0, 1);
-	color: rgba(0, 0, 0, 1);
 	opacity: 1;
-	// z-index: 5;
 }
 
-.op-off {
-	opacity: 0;
+.on-first-page-btn {
+	transition: opacity 1s;
 }
 
-.active-down {
-	background-color: rgba(0, 0, 0, 1);
-	color: rgba(0, 0, 0, 1);
-	// z-index: 5;
+.on-first-page {
+	transition: transform 2s 1s, opacity 1s 1.5s;
 }
 
-.text-active {
-	color: rgba(0, 0, 0, 1);
+.opacity-delay {
+	transition: opacity 1s 1s;
+}
+
+.opacity-delay-open-btn {
+	transition: opacity 1s 2s;
 }
