Fix background and img

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -100,7 +100,7 @@ body {
 		box-shadow: 0 0 5px;
 		transform-origin: left;
 		transition: transform 2s, opacity 1s;
-		background-image: url('/dist/img/paper.jpg');
+		background-image: url('../../dist/img/paper.jpg');
 		opacity: 0;
 	}
 
