--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -68,13 +68,6 @@ body {
 		padding: 0.25em 0.5em;
 		border: none;
 		background: none;
-		// background: rgb(115, 121, 4);
-		// background: linear-gradient(
-		// 	42deg,
-		// 	rgb(122, 126, 45) 0%,
-		// 	rgba(218, 200, 138, 1) 35%,
-		// 	rgb(137, 168, 13) 100%
-		// );
 		font-size: 2rem;
 		color: #ccc;
 		font-family: 'Handlee';
@@ -167,7 +160,6 @@ body {
 		height: 100%;
 		padding-top: 5em;
 		text-align: center;
-		// overflow-wrap: break-word;
 		transform: rotateY(180deg);
 		transition: opacity 1s, transform 1s;
 	}
@@ -192,13 +184,47 @@ body {
 		list-style: none;
 	}
 
+	&__work{
+		position: absolute;
+
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		width: 100%;
+		height: 100%;
+		transition: opacity 1s;
+		// z-index: 15;
+		opacity: 0;
+	}
+
+	&__work-img{
+		width: 100%;
+		cursor: pointer;
+		
+	}
+	
+	&__work-link{
+		width: 30%;
+		box-shadow: 0 0 10px;
+		border-radius: 16px;
+		// z-index: 15;
+		transition: transform 1s;
+		cursor: pointer;
+		
+		&:hover{
+			transform: scale(1.5);
+		}
+	}
+
 	&__work-btn{
 		position: relative;
 		padding: .5em 1em;
 		border: none;
 		background: none;
-		font-size: 1.5rem;
+		font-size: 2rem;
 		font-family: 'Handlee';
+		cursor: pointer;
 
 		&::after{
 			position: absolute;
@@ -234,6 +260,7 @@ body {
 
 .active {
 	opacity: 1;
+	z-index: 15;
 }
 
 .on-first-page-btn {
